src/main/java/com/example/bank/util/error/TransferBetweenEqualException.java
package com.example.bank.util.error;

public class TransferBetweenEqualException extends RuntimeException {
    public TransferBetweenEqualException() {
        super("No transfer between equal object");
    }
}
